# TicTacToe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  start.sh
.cache/clangd/index/: board.cpp.8F2507410679C49E.idx  board.h.8A6A1A086EB33C5F.idx  cell.cpp.9A6E4ED4BA5D9165.idx  cell.h.8C7AB323A79169F4.idx  game.cpp.E421C3B0A1BC6AF1.idx  game.h.F96F026A78953FE1.idx  input.cpp.77399C3957E4399D.idx  main.cpp.34F5A1CB61CC99E6.idx
assets/: circle_image.c  cross_image.c  empty_image.c  images.h
lib/: CMakeLists.txt  game_state.h  properties.h
lib/board/: CMakeLists.txt  board.cpp  board.h  cell.cpp  cell.h
lib/button/: CMakeLists.txt  button.c  button.h
lib/game/: CMakeLists.txt  game.cpp  game.h
lib/game_state/: CMakeLists.txt  game_state.c  game_state.h
lib/global/: CMakeLists.txt  properties.h  types.h
lib/input/: CMakeLists.txt  input.h  input_handler.cpp  input_handler.h
lib/math/: CMakeLists.txt  vec2.c  vec2.h
lib/network/: CMakeLists.txt  client.c  client.h  server.c  server.h
tests/: CMakeLists.txt  tests.cpp
